Se utilizan media querys para la sección efemerides y se enlazan links a redes

--- a/secciones/recetas.html
+++ b/secciones/recetas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Dealer´s Drinks - Recetas</title>
     <meta name="description" content="Recetas de cocteles, recetas de tragos">
     <meta name="keywords" content="trago, cocktail, coctel, bartender, whisky, aperitivo, gin, vodka, ron, licor">
@@ -13,6 +13,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -62,12 +66,12 @@
 
         <article id="tom-collins">
             <!--inicio receta tom collins-->
-            <div><img src="../dealers-drinks-images/receta-tom-collins-foto.png" alt="tom collins"></div>
+            <div><img id="tom-collins-foto" src="../dealers-drinks-images/receta-tom-collins-foto.png" alt="tom collins"></div>
             <div><img src="../dealers-drinks-images/tom-collins-ingredientes.png"
                     alt="tom collins tom-collins-ingredientes"></div>
             <div id="preparacion-tom-collins">
-                <h2>TOM COLLINS: PREPARACIÓN</h2>
-                <p>En un vaso de trago largo colmado de hielo agregamos el gin, el jugo de limón, el almíbar e
+                <h2>TOM COLLINS</h2>
+                <p>PREPARACIÓN: En un vaso de trago largo colmado de hielo agregamos el gin, el jugo de limón, el almíbar e
                     integramos bien los ingredientes con una cuchara. Agregamos la soda hasta completar el vaso y
                     volvemos a integrar. Por último decoramos con una rodaja de limón y una cereza.</p>
             </div>
@@ -75,11 +79,12 @@
 
         </article>
         <article id="negroni">
-            <div><img src="../dealers-drinks-images/receta-negroni-foto.png" alt="negroni"></div>
+            <div><img id="negroni-foto" src="../dealers-drinks-images/receta-negroni-foto.png" alt="negroni"></div>
             <div><img src="../dealers-drinks-images/negroni-ingredientes.png" alt="negroni-ingredientes"></div>
             <div class="preparacion-negroni">
-                <h2>NEGRONI: PREPARACIÓN</h2>
-                <P>En un vaso de trago corto colmado de hielo, agregamos las medidas de cada bebida e integramos bien
+                <h2>NEGRONI</h2>
+                <P>PREPARACIÓN:
+                    En un vaso de trago corto colmado de hielo, agregamos las medidas de cada bebida e integramos bien
                     con una cuchara, por último le sumamos la rodaja de naranja. Este cóctel es ideal prepararlo
                     refrescado, en un vaso de compensación pero si no contamos con esta herramienta podemos hacerlo
                     directo en el vaso.</P>
@@ -87,11 +92,12 @@
 
         </article>
         <article id="voodoo">
-            <div><img src="../dealers-drinks-images/receta-voodoo-foto.jpg" alt="voodoo"></div>
+            <div><img id="voodoo-foto" src="../dealers-drinks-images/receta-voodoo-foto.jpg" alt="voodoo"></div>
             <div><img src="../dealers-drinks-images/voodoo-ingredientes.jpg" alt="voodo-ingtredientes"></div>
             <div>
-                <h2>VOODOO: PREPARACIÓN</h2>
+                <h2>VOODOO</h2>
                 <P>
+                    PREPARACIÓN:
                     En un vaso de trago largo lleno de hielo, agregamos el ron, el vermut y un toque de jugo de limón
                     recién exprimido. Completamos con jugo de manzana.
                     El toque final es una rodaja de limón.
@@ -100,12 +106,11 @@
 
         </article>
         <article id="long-island">
-            <div><img src="../dealers-drinks-images/receta-long-island-foto.png" alt="long-island-iced-tea"></div>
+            <div><img id="long-island-foto" src="../dealers-drinks-images/receta-long-island-foto.png" alt="long-island-iced-tea"></div>
             <div><img src="../dealers-drinks-images/long-island-ingredientes.png" alt="long-island-ingtredientes"></div>
             <div>
-                <h2>LONG ISLAND ICED TEA:</h2>
-                <h2>PREPARACIÓN</h2>
-                <P>
+                <h2>LONG ISLAND ICED TEA</h2>
+                <P>PREPARACIÓN:
                     En un vaso de trago largo lleno de hielo, agregamos el ron, el vermut y un toque de jugo de limón
                     recién exprimido. Completamos con jugo de manzana.
                     El toque final es una rodaja de limón.
@@ -114,11 +119,11 @@
 
         </article>
         <article id="clarito">
-            <div><img src="../dealers-drinks-images/receta-clarito-foto.jpg" alt="clarito"></div>
+            <div><img id="clarito-foto" src="../dealers-drinks-images/receta-clarito-foto.jpg" alt="clarito"></div>
             <div><img src="../dealers-drinks-images/clarito-ingredientes.jpg" alt="clarito-ingtredientes"></div>
             <div>
-                <h2>PREPARACIÓN</h2>
-                <P>
+                <h2>CLARITO</h2>
+                <P>PREPARACIÓN:
                     En un vaso de composición lleno de hielo agregamos 2 onzas de gin, media onza de vermut seco o extra
                     seco, integramos bien con una cuchara larga y colamos en una copa cóctel sin hielo, previamente
                     enfriada. Antes de agregarle la piel de limón, debemos apretarla para que suelte su aceite esencial
@@ -127,23 +132,23 @@
             </div>
         </article>
         <article id="boulevardier">
-            <div><img src="../dealers-drinks-images/receta-boulevardier-foto.png" alt="boulevardier"></div>
+            <div><img id="boulevardier-foto" src="../dealers-drinks-images/receta-boulevardier-foto.png" alt="boulevardier"></div>
             <div><img src="../dealers-drinks-images/boulevardier-ingredientes.png" alt="boulevardier-ingtredientes">
             </div>
             <div>
-                <h2>PREPARACIÓN</h2>
-                <P>
+                <h2>BOULEVARDIER</h2>
+                <P>PREPARACIÓN:
                     En un vaso de trago corto colmado de hielo, agregamos las medidas de cada bebida e integramos bien
                     con una cuchara. Por último le sumamos la rodaja de naranja.
                 </P>
             </div>
         </article>
         <article id="daiquiri">
-            <div><img src="../dealers-drinks-images/receta-daiquiri-foto.jpeg" alt="daiquiri"></div>
+            <div><img id="daiquiri-foto" src="../dealers-drinks-images/receta-daiquiri-foto.jpeg" alt="daiquiri"></div>
             <div><img src="../dealers-drinks-images/daiquiri-Ingredientes.jpeg" alt="daiquiri-ingtredientes"></div>
             <div>
-                <h2>PREPARACIÓN</h2>
-                <P>
+                <h2>DAIQUIRI</h2>
+                <P>PREPARACIÓN:
                     En una coctelera agregá todos los ingredientes incluyendo las frutillas limpias y cortadas en
                     trozos. Machacalas con un mortero y llená la coctelera de hielo. Cerrala con firmeza y agitala
                     durante diez segundos. Por último, colá el contenido con la ayuda de un colador oruga, dentro de una
@@ -152,11 +157,11 @@
             </div>
         </article>
         <article id="caipiroska">
-            <div><img src="../dealers-drinks-images/receta-caipiroska-foto.jpg" alt="caipiroska"></div>
+            <div><img id="caipiroska-foto" src="../dealers-drinks-images/receta-caipiroska-foto.jpg" alt="caipiroska"></div>
             <div><img src="../dealers-drinks-images/caipiroska-ingredientes.jpg" alt="caipiroska-ingtredientes"></div>
             <div>
-                <h2>PREPARACIÓN</h2>
-                <P>
+                <h2>CAIPIROSKA</h2>
+                <P>PREPARACIÓN:
                     En un vaso de trago corto colocamos media lima cortada en trozos. Agregamos 2 o 3 cucharadas de
                     azúcar o 15ml (media onza) de almíbar. Volcamos el vodka en la preparación, machacamos suavemente la
                     lima y luego le agregamos el hielo molido hasta colmar el vaso. Finalmente integramos bien con una
